test/cases/errors/harmony-import-missing2/module1.js
export * from "./missing1";
export * from "./a?1";
